row gap fixed

--- a/styles.css
+++ b/styles.css
@@ -167,19 +167,22 @@ main {
 
 }
 
+.instagram-container img {
+    width: 300px;
+}
+
 .instagram-container {
     width: 100%;
     height: 50vh;
     display: flex;
     justify-content: center;
     gap: 30px;
-
 }
 
 /* custom gift styles */
 .custom-gift-text {
     text-align: center;
-    margin-top: 100px;
+    margin-top: 50px;
     margin-bottom: 30px;
 }
 
